# chat_ai

./: .gitignore  README.md  bot.py  justfile  main.py  prompt.yaml  pyproject.toml  tool.py
agents/: assistant.yaml
