[project]
name = "chat_ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "langchain-openai>=0.3.32",
    "langchain[ollama,openai]>=0.3.27",
    "pydantic>=2.11.7",
    "streamlit>=1.49.0",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.0",
]

[[tool.uv.index]]
url = "https://mirrors.ustc.edu.cn/pypi/simple"
default = true
